--- a/core/homepage/templates2/index.html
+++ b/core/homepage/templates2/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>EpicTask</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
-  <link rel="icon" href="../img/work-tools.ico" type="image/x-icon">
+  <link rel="icon" href="./img/work-tools.ico" type="image/x-icon">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 <link rel="stylesheet" href="./css/style.css">
