--- a/core/homepage/templates2/index.html
+++ b/core/homepage/templates2/index.html
@@ -22,7 +22,7 @@
 </svg>
 <div class="message-box">
   <h1>EpicTask</h1>
-  <p>Convierte tus tareas en hazañas épicas</p>
+  <p>Convierte tus tareas en hazañas épicas.</p>
   <div class="buttons-con">
     <div class="action-link-wrap">
       <a onclick="history.back(-1)" class="link-button link-back-button">Entrar</a>
